# fedimint-lnv2-remote-client

./: Cargo.toml  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: ci-nix.yml  ci.yml
fedimint-cli/: Cargo.toml
fedimint-cli/src/: main.rs
fedimint-lnv2-remote-client/: Cargo.toml
fedimint-lnv2-remote-client/src/: api.rs  claim_sm.rs  cli.rs  db.rs  iroh_msgs.rs  lib.rs  remote_receive_sm.rs
fedimint-lnv2-remote-common/: Cargo.toml
fedimint-lnv2-remote-tests/: Cargo.toml
fedimintd/: Cargo.toml
fedimintd/src/: fedimintd.rs
scripts/tests/: protocol-tests.sh
