[package]
name = "roastr-cli"
version = "0.0.3"
authors = ["tvolk131"]
edition = "2024"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimint-cli = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-remote-client = { path = "../fedimint-lnv2-remote-client", features = [
    "cli",
] }
fedimint-wallet-client = "0.7.2"
fedimint-mint-client = "0.7.2"
tokio = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }
