[package]
name = "fedimint-cli"
publish = false
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimint-cli = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-remote-client = { path = "../fedimint-lnv2-remote-client", features = [
    "cli",
] }
fedimint-wallet-client = "0.8.1"
fedimint-mint-client = "0.8.1"
tokio = { workspace = true }

[build-dependencies]
fedimint-build = "0.8.1"
