[package]
name = "fedimint-cli"
publish = false
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimint-cli = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-remote-client = { path = "../fedimint-lnv2-remote-client", features = [
    "cli",
] }
fedimint-wallet-client = { workspace = true }
fedimint-mint-client = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }
