[package]
name = "fedimint-lnv2-remote-client"
version = "0.0.1"
authors = ["tvolk131"]
edition = "2021"
description = "A federated remote lightning receive client."
license = "MIT"

[lib]
name = "fedimint_lnv2_remote_client"
path = "src/lib.rs"

[features]
default = []
cli = ["dep:clap", "dep:hex", "dep:bincode"]

[dependencies]
aquamarine = "0.6.0"
async-stream = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
bincode = { version = "1.3.3", optional = true }
hex = { version = "0.4.3", optional = true }
clap = { workspace = true, optional = true }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-tpe = { workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
lightning-invoice = { workspace = true }
nostr-sdk = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
secp256k1 = { workspace = true }
schnorr_fun = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
