[package]
name = "fedimint-lnv2-remote-client"
version = "0.0.2"
authors = ["tvolk131"]
edition = "2024"
description = "A federated remote lightning receive client."
license = "MIT"

[lib]
name = "fedimint_lnv2_remote_client"
path = "src/lib.rs"

[features]
default = []
cli = ["dep:clap", "dep:hex", "dep:bincode"]

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
bincode = { version = "1.3.3", optional = true }
hex = { version = "0.4.3", optional = true }
clap = { workspace = true, optional = true }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-tpe = { workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
