[package]
name = "fedimint-lnv2-remote-client"
description = "Fedimint remote lightning receive client."
license = "MIT"
publish = true
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "fedimint_lnv2_remote_client"
path = "src/lib.rs"

[features]
default = []
cli = ["dep:clap", "dep:hex", "dep:bincode"]

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
aquamarine = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
bincode = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
erased-serde = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-tpe = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, optional = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
