[package]
name = "fedimint-lnv2-remote-tests"
version = "0.0.1"
authors = ["tvolk131"]
edition = "2024"
description = "A federated remote lightning receive client."
license = "MIT"
publish = false

[[bin]]
name = "roastr-devimint-tests"
path = "bin/tests.rs"

[dependencies]
anyhow = { workspace = true }
devimint = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-lnv2-remote-client = { path = "../fedimint-lnv2-remote-client" }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
lightning-invoice = { workspace = true }
substring = "1.4.5"
fedimint-client = "0.7.2"
bincode = "1.3.3"
hex = { version = "0.4.3" }
