[package]
name = "fedimint-lnv2-remote-tests"
publish = false
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "fedimint-lnv2-remote-tests"
path = "bin/tests.rs"

[dependencies]
anyhow = { workspace = true }
devimint = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-lnv2-remote-client = { path = "../fedimint-lnv2-remote-client" }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
lightning-invoice = { workspace = true }
substring = "1.4.5"
bincode = { version = "2.0.1", features = ["serde"] }
hex = { version = "0.4.3" }
