[package]
name = "fedimint-lnv2-remote-tests"
publish = false
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "fedimint-lnv2-remote-tests"
path = "bin/tests.rs"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
devimint = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-lnv2-remote-client = { path = "../fedimint-lnv2-remote-client" }
hex = { workspace = true }
lightning-invoice = { workspace = true }
serde_json = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
