[package]
name = "roastr"
version = "0.0.2"
authors = ["tvolk131"]
edition = "2024"
description = "fedimintd"

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = { workspace = true }
fedimintd = { workspace = true }
tokio = { workspace = true }
fedimint-core = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }
