[package]
name = "fedimintd"
publish = false
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = { workspace = true }
fedimintd = { workspace = true }
tokio = { workspace = true }
fedimint-core = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }
